RESOLVED FIXED44737
r66141 caused fast/forms/select-style.html to fail on mac:
https://bugs.webkit.org/show_bug.cgi?id=44737
Summary r66141 caused fast/forms/select-style.html to fail on mac:
Simon Fraser (smfr)
Reported 2010-08-26 17:44:12 PDT
r66141 seems to have caused fast/forms/select-style.html to fail on mac:
Attachments
Patch (1.96 KB, patch)
2010-08-26 20:38 PDT, Simon Fraser (smfr)
zimmermann: review+
Simon Fraser (smfr)
Comment 1 2010-08-26 19:49:43 PDT
This regressed because of the *style->backgroundLayers() != background check in RenderTheme.cpp:694, where the style contains a StylePendingImage.
Simon Fraser (smfr)
Comment 2 2010-08-26 20:38:30 PDT
Nikolas Zimmermann
Comment 3 2010-08-27 02:23:59 PDT
Comment on attachment 65669 [details] Patch Looks good to me, r=me. Simon, I'm going to land this, as it's blocking the mac bots to turn green.
Nikolas Zimmermann
Comment 4 2010-08-27 02:27:24 PDT
Landed in r66195. Hope it's okay for you. I'd like to land a larger patch, and want to have all test bots green before doing that.
Simon Fraser (smfr)
Comment 5 2010-08-27 09:03:50 PDT
Thanks for landing!
Note You need to log in before you can comment on or make changes to this bug.