WebCore/css/CSSImageValue.cpp
@@ -50,6 +50,9 @@ CSSImageValue::~CSSImageValue()
 
 StyleImage* CSSImageValue::cachedOrPendingImage()
 {
+    if (getIdent() == CSSValueNone)
+        return 0;
+
     if (!m_image)
         m_image = StylePendingImage::create(this);
 
